[gd_scene load_steps=4 format=3 uid="uid://dggyhevyw8x75"]

[ext_resource type="Theme" uid="uid://c2ywgxeig0yn2" path="res://default_btn.tres" id="1_a1oif"]
[ext_resource type="Script" path="res://menu.gd" id="1_cux3h"]
[ext_resource type="Texture2D" uid="uid://bi3wiyjghopn" path="res://Imgs/capaDoJogo.jpeg" id="2_pba6g"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 7.0
offset_right = -2.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cux3h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -23.0
offset_right = 1177.0
offset_bottom = 661.0

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 12.0
offset_top = 39.0
offset_right = 1163.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pba6g")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -8.0
offset_right = 2.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="iniciar_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_a1oif")
text = "INICIAR
"

[node name="opcoes_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_a1oif")
text = "OPÇÕES
"

[node name="creditos_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_a1oif")
text = "CRÉDITOS
"

[node name="sair_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_a1oif")
text = "SAIR
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/iniciar_btn" to="." method="_on_iniciar_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/opcoes_btn" to="." method="_on_opcoes_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/creditos_btn" to="." method="_on_creditos_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/sair_btn" to="." method="_on_sair_btn_pressed"]
